fix: UICensored styling, vertical align

--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -12,3 +12,6 @@
     display: inline-block;
     border-radius: 0.3rem;
 }
+.is-vertical-middle {
+    vertical-align: middle;
+}
